# ACM

./: CMakeLists.txt  t.c  temp-DESKTOP-2I0G0T8.cpp  temp.c  temp.cpp  temp.py  temp.txt  temp2.cpp  template.cpp
.VSCodeCounter/2021-07-30_17-04-04/: details.md  results.csv  results.md  results.txt
Check/: 1.txt  a.out  b.out  dp.cpp  gen.cpp  std.out  test.in  test.out
OtherCodes/: 10.27-prim.cpp  10.29-1.cpp  10.29-3.cpp  10.29.4.cpp  11.1-1.cpp  11.11-kruskal.c  11.11-kruskal.md  11.15-约瑟夫环.c  11.16-线索二叉树.cpp  11.17-ackermann.cpp  11.17-tju.cpp  11.17-tju2.cpp  11.2-1.c  11.23-最短路径.cpp  11.23-重建二叉树.cpp  11.24-顺序表.c  11.25-01背包对比.cpp  11.26-哈夫曼.cpp  11.30-floyed.cpp  11.6-随机迷宫.cpp  11.7-1-map.cpp  11.7-1.cpp  11.7-2.cpp  12.1-先序遍历.cpp  12.11-16进制.c  12.11-Prim.cpp  12.11-hc.cpp  12.11-暴力.cpp  12.11-模拟.cpp  12.14-kmp.cpp  12.14-pprim.cpp  12.16-t2.c  12.17-PTA-prim.cpp  12.18-PTA-KMPP.cpp  12.19-sort.cpp  12.2-floyed.cpp  12.20-合并果子.cpp  12.28-导游系统.cpp  12.29-通信网络.cpp  12.4-二分.cpp  (+3 more)
genshin-fps-unlock-main/: CppProperties.json  README.md  unlockfps.sln
temp/: CMakeLists.txt  Markdown.md  Untitled-1.cpp  makeData.in  makeData.yml  makeDataGen.cpp  monsterGen.cpp  nowTemp.html  temp.out  tempJavaScript.jsp  tt.cpp  tt.yml
temp/lores/: 1卡片.yml  中级卡片.yml  初级卡片.yml  幽灵套.yml  科技结晶.yml  红玉髓.yml  纳米套.yml  量子套.yml
temp/problems/: b.cpp
temp/problems/1/: 1.md  4.in  5.in
temp/problems/2/: 2.md  2.out
temp/test/: Untitled-1.cpp  temp.out
temp/test/M/: Untitled-1.cpp  test.cpp
temp/webMarkdown/: 1.md  2.md  3.md  4.md  5.md
template/: Fenwick.cpp  Kruskal.cpp
(+1221 files in other folders)
